[package]
name = "spiral_inductor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Spiral-inductor extraction benchmark: L/R/Q/S11/SRF vs Mohan analytic + mom PEEC oracles (issue #211, Epic #193)."

[[bin]]
name = "spiral_inductor"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
geode-app = { workspace = true }
geode-core = { workspace = true }
# `edge_field_to_nodes` for the `--export-field` Whitney edge-DOF → nodal E reconstruction.
geode-examples-support = { workspace = true }
# `BackendTypes` device handle for the driven frequency sweep + `--export-field` solve.
burn = { workspace = true }
# `faer::c64` for the per-port complex impedance arithmetic.
faer = { workspace = true }

# NOTE: this crate deliberately defines NO backend features. The Burn
# backend (`wgpu` by default, or `ndarray` on headless CI) is selected by
# geode-core's default features / the workspace `--features` flags at build
# time, exactly like `geode-cli` and `geode-validation`.

[lints.rust]
unsafe_code = "forbid"
