[package]
name = "step_index_fiber"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SMF-28 step-index circular-fiber benchmark vs the exact LP-mode oracle on the PML-terminated complex-pencil solver (Epic #303 PML-C, issue #333)."

[[bin]]
name = "step_index_fiber"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
geode-app = { workspace = true }
geode-core = { workspace = true }
geode-util = { workspace = true }
# `#[derive(Serialize)]` on the `[series_<i>]` row for the serde+toml row
# seam (geode_util::fixture::push_rows, Epic #429 Phase 3).
serde = { workspace = true }

# NOTE: this crate deliberately defines NO backend features. The Burn
# backend (`wgpu` by default, or `ndarray` on headless CI) is selected by
# geode-core's default features / the workspace `--features` flags at build
# time, exactly like `geode-cli`.

[lints.rust]
unsafe_code = "forbid"
