# geode_viz — Python visualization package for geode-fem benchmarks.
#
# Lands with #277 (Phase 1A of Epic #276). Subsequent Phase 1 issues
# (#278 / #279 / #280) build line plots on top of this scaffold; this
# package only exposes the shared loader / style / paths surface.
#
# Self-contained under tools/viz/ — no top-level repo deps (acceptance
# criterion for #277). Install with `pip install -e tools/viz`.

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geode_viz"
version = "0.1.0"
description = "Visualization helpers for geode-fem benchmark TOMLs (loader, matplotlib style, artifacts/ convention)."
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }
authors = [
    { name = "geode-fem contributors" },
]
keywords = ["fem", "visualization", "matplotlib", "benchmarks"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    # Python 3.11+ ships `tomllib` in the stdlib, but we declare `tomli`
    # as a belt-and-braces dep so the package import path is identical
    # if a sibling tool ends up needing 3.10 (and `tomllib.load` shape
    # is mirrored by `tomli.load`).
    "tomli >= 2.0; python_version < '3.11'",
    "numpy >= 1.24",
    "matplotlib >= 3.7",
]

[project.urls]
Homepage = "https://github.com/rjwalters/geode-fem"
Issues = "https://github.com/rjwalters/geode-fem/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["geode_viz*"]
