# Offline Palace config generator for the geode-fem spiral-inductor
# benchmark (issue #266, parity with the patch-antenna driver from
# issue #239 / PR #242). NOT part of the geode workspace and NOT built
# in CI — same offline-sidecar convention as `reference/mom/` and
# `reference/numpy/`.
#
# Palace itself is NOT a dependency of this generator: this binary
# **only emits a Palace JSON configuration file** that an operator
# (with a working Palace install or a Docker recipe such as the one
# under `~/GitHub/sphere/eda/mom/docker/palace`) can feed to Palace
# directly. The run + result-ingestion step lives in
# `reference/palace/README.md`.
#
# Usage:
#
#   cd reference/palace/geode_spiral_baseline
#   cargo run --release
#
# Writes:
#   reference/fixtures/spiral_palace/palace_config.json
#   reference/fixtures/spiral_palace/palace_config.provenance.txt

[package]
name = "geode-spiral-palace-baseline"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
